# autogit

./: .flake8  Makefile  README.md  TODO  design.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check-autogit-on-python312.yml  check-autogit-on-python38.yml
.github_disabled/workflows/: check-autogit-on-python313.yml
autogit/: Makefile  __init__.py  architecture.txt  cli.py  constants.py  data_types.py
autogit/actions/: _1_parse_arguments.py  _2_get_repository_states.py  _3_detect_tokens_and_api_versions.py  _3_get_tokens_and_api_versions.py  _3_process_repo_to_create_pull_request.py  _3a_clone_repositories.py  _3b_create_branch.py  _3c_run_command.py  _3d_commit_and_push_changes.py  _3e_create_pull_request.py  _4_clone_repositories.py  _4_process_repo_to_create_pull_request.py  _4_show.py  _4a_clone_repositories.py  _4b_create_branch.py  _4c_run_command.py  _4d_commit_and_push_changes.py  _4e_create_pull_request.py  _5_show.py  _8_create_pull_request.py  argument_parsing.py  clone_repositories.py  commit_and_push_changes.py  create_branch.py  create_pull_request.py  get_repository_states.py  run_command.py
autogit/tests/: test_command_line_argument_parsing.py  test_git_repository_cloning.py  test_throttled_tasks_executor.py
autogit/utils/: helpers.py  throttled_tasks_executor.py
examples/: update_mypy_version.py
experiments/: Makefile
git_multi_repo_updater/: Makefile  cli.py
gitmultirepoupdater/: cli.py  constants.py  data_types.py
gitmultirepoupdater/actions/: argument_parsing.py  clone_repositories.py  commit_and_push_changes.py  create_branch.py  create_pull_request.py  get_repository_states.py  run_command.py
gitmultirepoupdater/tests/: test_command_line_argument_parsing.py  test_throttled_tasks_executor.py
gitmultirepoupdater/utils/: argument_parsing.py  helpers.py  throttled_tasks_executor.py
manual_tests/: Makefile  add_hello_to_readme.py  repos.txt
tests/: conftest.py  test_2_get_repository_states.py  test_4_clone_repositories.py  test_command_line_argument_parsing.py  test_git_repository_cloning.py  test_github_api.py  test_throttled_tasks_executor.py
tests/actions/: test_clone_repositories.py
