[project]
name = "autogit"
authors = [
    {name = "Albertas Gimbutas", email = "albertasgim@gmail.com"},
]
description = "autogit is a command line tool for updating multiple GitLab or GitHub repositories with a single command."
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
    "GitPython >= 3.1.29",
    "httpx >= 0.23.1"
]

[project.urls]
homepage = "https://github.com/albertas/autogit"

[project.scripts]
autogit = "autogit.cli:main"

[project.optional-dependencies]
test = [
    "hatch",
    "ruff",
    "mypy",
    "pip-audit",
    "deadcode",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = "--cov=. --no-cov-on-fail --cov-fail-under=50.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["**/*.py"]
exclude = ["tests/**"]

[tool.hatch.version]
path = "autogit/__init__.py"

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
line-length = 88

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one blank line before class
    "D213",    # multi line summary second line
    "COM812",  # missing trailing comma
    "ISC001",  # single line implicit string concatenation
    "ANN101",  # deprecated requirement to annotate self
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"] # allow assert and no docs in tests

[tool.mypy]
exclude = ["build", "dist", ".venv"]
python_version = "3.12"
strict = true
pretty = true
color_output = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true

[tool.deadcode]
ignore_names = [
    "main",
]
exclude = ["tests"]
